--- a/src/WebUI/index.html
+++ b/src/WebUI/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>link-whisper-shortener-service</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Url Shortener</title>
+    <meta name="description" content="Url Shortener" />
+    <meta name="author" content="Url Shortener" />
 
-    <meta property="og:title" content="link-whisper-shortener-service" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Url Shortener" />
+    <meta property="og:description" content="Url Shortener" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://url-shortener-obve.onrender.com/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@url-shortener-obve" />
+    <meta name="twitter:image" content="https://url-shortener-obve.onrender.com/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
